--- a/restful-dms-ui/src/app/navigation/navigation.component.html
+++ b/restful-dms-ui/src/app/navigation/navigation.component.html
@@ -64,17 +64,17 @@
 
       <a class="list-group-item list-group-item-action waves-effect" href="#" routerLink="#"
          routerLinkActive="active">
-        <mdb-icon class="mr-3" fas icon="hourglass-half"></mdb-icon>Przeglądaj
+        <mdb-icon class="mr-3" fas icon="address-book"></mdb-icon>Przeglądaj
       </a>
 
       <a class="list-group-item list-group-item-action waves-effect" href="#" routerLink="#"
          routerLinkActive="active">
-        <mdb-icon class="mr-3" fas icon="receipt"></mdb-icon>Zablokowani
+        <mdb-icon class="mr-3" fas icon="ban"></mdb-icon>Zablokowani
       </a>
 
       <a class="list-group-item list-group-item-action waves-effect" href="#" routerLink="#"
          routerLinkActive="active">
-        <mdb-icon class="mr-3" fas icon="bullhorn"></mdb-icon>Powiadom
+        <mdb-icon class="mr-3" fas icon="paper-plane"></mdb-icon>Powiadom
       </a>
       <!--/Tickets-->
     </div>
@@ -95,47 +95,85 @@
     </logo>
 
     <!-- Collapsible content -->
-    <links class="justify-content-end ">
+    <links class="justify-content-end">
+
       <!-- Mobile and tablet navigation -->
+
       <ul class="navbar-nav mr-auto d-xl-none">
 
-
         <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">1</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">2</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="" mdbWavesEffect target="_blank">3</a>
-
-        </li>
-        <li class="nav-item dropdown" dropdown>
-          <a class="nav-link dropdown-toggle waves-light" dropdownToggle mdbWavesEffect mdbWavesEffect type="button">
-            Basic dropdown
-            <span class="caret"></span>
+          <a class="nav-link">
+            <div class="btn-group w-100" mdbDropdown>
+              <a class="nav-link dropdown-toggle waves-light w-100" dropdownToggle mdbWavesEffect mdbWavesEffect
+                 type="button">
+                Dokumenty
+                <span class="caret"></span>
+              </a>
+              <div class="dropdown-menu dropdown-primary pt-0 pb-0 w-100">
+                <a class="dropdown-item " href="#">Wszystkie</a>
+                <a class="dropdown-item" href="#">Ulubione</a>
+                <a class="dropdown-item" href="#">Własne</a>
+                <a class="dropdown-item" href="#">Rejestr zdarzeń</a>
+                <div class="divider dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Utwórz nowy</a>
+              </div>
+            </div>
           </a>
-          <div *dropdownMenu class="dropdown-menu dropdown dropdown-primary" role="menu">
-            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Action</a>
-            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Another action</a>
-            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Something else here</a>
-            <div class="divider dropdown-divider"></div>
-            <a class="dropdown-item waves-light" href="#" mdbWavesEffect>Separated link</a>
-          </div>
         </li>
+
+        <li class="nav-item">
+          <a class="nav-link">
+            <div class="btn-group w-100" mdbDropdown>
+              <a class="nav-link dropdown-toggle waves-light w-100" dropdownToggle mdbWavesEffect mdbWavesEffect
+                 type="button">
+                Zgłoszenia
+                <span class="caret"></span>
+              </a>
+              <div class="dropdown-menu dropdown-primary pt-0 pb-0 w-100">
+                <a class="dropdown-item" href="#">Otwarte</a>
+                <a class="dropdown-item" href="#">Historia</a>
+                <a class="dropdown-item" href="#">Zgłoś problem</a>
+                <div class="divider dropdown-divider"></div>
+                <a (click)="logout()" class="dropdown-item" href="javascript:void(0)">Wyloguj</a>
+              </div>
+            </div>
+          </a>
+        </li>
+
+        <li class="nav-item">
+          <a class="nav-link">
+            <div class="btn-group w-100" mdbDropdown>
+              <a class="nav-link dropdown-toggle waves-light w-100" dropdownToggle mdbWavesEffect mdbWavesEffect
+                 type="button">
+                Użytkownicy
+                <span class="caret"></span>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right dropdown-primary pt-0 pb-0 w-100">
+                <a class="dropdown-item" href="#">Przeglądaj</a>
+                <a class="dropdown-item" href="#">Zablokowani</a>
+                <a class="dropdown-item" href="#">Powiadom</a>
+                <div class="divider dropdown-divider"></div>
+                <a (click)="logout()" class="dropdown-item" href="javascript:void(0)">Wyloguj</a>
+              </div>
+            </div>
+          </a>
+        </li>
+
       </ul>
+      <!--Notificiation + your profile-->
+      <!--Albo zamienic wszystko na ikony w linkach-->
       <!--  -->
 
       <!-- Icons -->
-      <ul class="navbar-nav ml-auto nav-flex-icons">
+      <ul class="navbar-nav ml-auto nav-flex-icons justify-content-end">
         <li class="nav-item">
           <a class="nav-link text-white">1
-            <mdb-icon fas icon="envelope"></mdb-icon>
+            <mdb-icon fas icon="bell"></mdb-icon>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link">
-            <div class="btn-group" mdbDropdown>
+            <div class="btn-group dropleft" mdbDropdown>
               <mdb-icon class="text-white nav-icon" fas icon="user" mdbDropdownToggle></mdb-icon>
               <div class="dropdown-menu dropdown-menu-right dropdown-primary pt-0 pb-0">
                 <a class="dropdown-item" href="#">Twój profil</a>
