--- a/restful-dms-ui/src/app/navigation/navigation.component.scss
+++ b/restful-dms-ui/src/app/navigation/navigation.component.scss
@@ -95,8 +95,11 @@
 }
 
 .dropdown-item {
-
   &:hover {
+    background-color: #dde9ee;
+  }
+
+  &:active {
     background-color: #dde9ee;
   }
 }
