--- a/restful-dms-ui/src/styles.scss
+++ b/restful-dms-ui/src/styles.scss
@@ -20,6 +20,16 @@ main {
   padding: 70px 20px 20px 20px;
 }
 
+.required-field::after {
+  content: "*";
+  color: red;
+}
+
+.openModalBtn {
+  border-radius: 20px;
+  //color: #0099CC;
+  //border: 2px solid #0099CC;
+}
 
 // Media queries
 
