--- a/restful-dms-ui/src/app/_add-document/add-document.component.html
+++ b/restful-dms-ui/src/app/_add-document/add-document.component.html
@@ -9,7 +9,7 @@
   <div class="modal-dialog modal-notify" role="document">
 
     <!--Content-->
-    <div class="modal-content ">
+    <div class="modal-content mb-3">
 
       <!--Header-->
       <div class="modal-header text-center info-color-dark">
@@ -26,34 +26,47 @@
         <form (ngSubmit)="onSubmit()" [formGroup]="addDocumentForm">
 
           <!--Title-->
-          <div class="md-form mb-3">
-            <input class="form-control" formControlName="title" id="title" mdbInput type="text">
+          <div class="md-form">
+            <input [validateSuccess]="false" class="form-control" formControlName="title" id="title" mdbInput
+                   mdbValidate type="text">
             <label data-error="wrong" data-success="right" for="title">
               Nazwa
               <span class="required-field"></span>
             </label>
+            <mdb-error *ngIf="title.invalid
+            && (title.dirty || title.touched)">Minimalna długość: 3
+            </mdb-error>
           </div>
 
           <!--Brief-->
-          <div class="md-form mb-3">
-            <input class="form-control" formControlName="brief" id="brief" mdbInput type="text">
+          <!--Title-->
+          <div class="md-form">
+            <input [validateSuccess]="false" class="form-control" formControlName="brief" id="brief" mdbInput
+                   mdbValidate type="text">
             <label data-error="wrong" data-success="right" for="brief">
               Krótki opis
               <span class="required-field"></span>
             </label>
+            <mdb-error *ngIf="brief.invalid
+            && (brief.dirty || brief.touched)">Minimalna długość: 3
+            </mdb-error>
           </div>
 
           <!--Description-->
-          <div class="md-form mb-3">
-            <textarea class="form-control md-textarea" formControlName="description" id="description" mdbInput rows="3"
+          <div class="md-form">
+            <textarea [validateSuccess]="false" class="form-control md-textarea" formControlName="description"
+                      id="description" mdbInput mdbValidate rows="3"
                       type="text"></textarea>
-            <label data-error="wrong" data-success="right" for="description">
+            <label for="description">
               Opis
             </label>
+            <mdb-error *ngIf="description.invalid
+            && (description.dirty || description.touched)">Maksymalna długość długość: 255
+            </mdb-error>
           </div>
 
           <!--File-->
-          <div class="md-form mb-3 file-field">
+          <div class="md-form file-field">
             <input (change)="onFileChange($event)" id="file" name="file" style="width: 235px" type="file"/>
             <span class="required-field"></span>
           </div>
